feat: add media re-identification
